Implement in-memory XSD resource resolution
Replaced `XsdResourceResolver` with `InMemoryXsdResourceResolver` to resolve schemas from a map of file contents instead of the classpath.
Updated `ValidationXsdSchemaService` to accept the schema map and use the new resolver.
Modified `Input` view to pass the schema map during validation.
Updated tests to match the new service signature and use `readAllBytes`.