@@ -1,6 +1,5 @@
 package com.rubn.xsdvalidator.service;
 
-import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -15,6 +14,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Map;
 
 @Disabled
 @ExtendWith(MockitoExtension.class)
@@ -34,10 +34,10 @@ class ValidationXsdSchemaServiceTest {
         InputStream inputStream1 = new BufferedInputStream(Files.newInputStream(PAIN_MOCK_PATH));
         InputStream inputStream2 = new BufferedInputStream(Files.newInputStream(XSD_MOCK_PATH));
 
-        byte[] array1 = IOUtils.toByteArray(inputStream1);
-        byte[] array2 = IOUtils.toByteArray(inputStream2);
+        byte[] array1 = inputStream1.readAllBytes();
+        byte[] array2 = inputStream2.readAllBytes();
 
-        Flux<String> listString = validationXsdSchemaService.validateXmlInputWithXsdSchema(array1, array2)
+        Flux<String> listString = validationXsdSchemaService.validateXmlInputWithXsdSchema(array1, array2, Map.of())
                 .doOnNext(System.out::println);
 
         StepVerifier.create(listString)
